fixing this shit up :3

--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>tame.wtf - Programmer & Musician</title>
+    <meta name="description" content="Personal portfolio of Tame, a 16-year-old programmer and musician specializing in VFX, motion graphics, music production, and web development." />
+    <meta name="keywords" content="programmer, musician, vfx, motion graphics, web development, portfolio, tame" />
+    <meta name="author" content="Tame" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tame.wtf/" />
+    <meta property="og:title" content="tame.wtf - Programmer & Musician" />
+    <meta property="og:description" content="Personal portfolio of Tame, a 16-year-old programmer and musician specializing in VFX, motion graphics, music production, and web development." />
+    <meta property="og:image" content="https://tame.wtf/images/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://tame.wtf/" />
+    <meta property="twitter:title" content="tame.wtf - Programmer & Musician" />
+    <meta property="twitter:description" content="Personal portfolio of Tame, a 16-year-old programmer and musician specializing in VFX, motion graphics, music production, and web development." />
+    <meta property="twitter:image" content="https://tame.wtf/images/og-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
-    <title>tame.wtf</title>
+
+    <!-- Theme color for mobile browsers -->
+    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-TileColor" content="#000000" />
   </head>
   <body>
     <div id="root"></div>
