better neow meow meow meow meowooweoweo

--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tame.wtf - Programmer & Musician</title>
-    <meta name="description" content="Personal portfolio of Tame, a 16-year-old programmer and musician specializing in VFX, motion graphics, music production, and web development." />
-    <meta name="keywords" content="programmer, musician, vfx, motion graphics, web development, portfolio, tame" />
+    <title>tame.wtf</title>
     <meta name="author" content="Tame" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tame.wtf/" />
-    <meta property="og:title" content="tame.wtf - Programmer & Musician" />
-    <meta property="og:description" content="Personal portfolio of Tame, a 16-year-old programmer and musician specializing in VFX, motion graphics, music production, and web development." />
+    <meta property="og:title" content="tame.wtf" />
     <meta property="og:image" content="https://tame.wtf/images/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://tame.wtf/" />
-    <meta property="twitter:title" content="tame.wtf - Programmer & Musician" />
-    <meta property="twitter:description" content="Personal portfolio of Tame, a 16-year-old programmer and musician specializing in VFX, motion graphics, music production, and web development." />
+    <meta property="twitter:title" content="tame.wtf" />
     <meta property="twitter:image" content="https://tame.wtf/images/og-image.jpg" />
 
     <!-- Favicon -->
